# Naive-Instant-3d-Photography

./: CMakeLists.txt
include/: featureMatching.hpp  meshing.hpp  stitcher.hpp
input/images2/imagens/: IMG_9750.HEIC  IMG_9754.HEIC  IMG_9755.HEIC
input/scene2/original/: IMG_9747.HEIC  IMG_9748.HEIC  IMG_9749.HEIC  IMG_9751.HEIC  IMG_9752.HEIC  IMG_9753.HEIC
src/: featureMatching.cpp  main.cpp  meshing.cpp  stitcher.cpp
